// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays 404 error correctly 1`] = `
<div>
  <section
    class="container"
  >
    <div
      class="container"
    >
      <span
        class="errorCode"
      >
        404
      </span>
      <h2
        class="heading title"
      >
        Not Found
      </h2>
    </div>
  </section>
</div>
`;

exports[`displays 500 error correctly 1`] = `
<div>
  <section
    class="container"
  >
    <div
      class="container"
    >
      <span
        class="errorCode"
      >
        500
      </span>
      <h2
        class="heading title"
      >
        Server Error
      </h2>
    </div>
  </section>
</div>
`;
